feat: corrected token blacklisting